fix(section-second): better spacing for mobile devices

--- a/src/components/section-second.less
+++ b/src/components/section-second.less
@@ -86,8 +86,16 @@ section.section-second {
     }
   }
 
+  .grid:first-child {
+    margin-bottom: 2rem;
+  }
+
   .three.column.grid {
     .column {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
       .feature-image {
         border-radius: 12px;
         width: 350px;
@@ -96,9 +104,11 @@ section.section-second {
       }
       h3 {
         font-weight: bold;
-        margin-top: 0.3em;
+        margin-top: 1em;
       }
       p {
+        max-width: 350px;
+        text-indent: 0.5em;
         font-size: 1.2rem;
       }
     }
